# ahc-local-leaderboard

./: .gitignore  LICENSE  README.md  pyproject.toml  開発memo.md
.github/workflows/: test.yml
examples/ahc036/tools/: a.out  debug.txt  gmon.out  vis.html
examples/ahc036/tools/leader_board/: config.yaml  leader_board.db
examples/ahc038/pahcer/: best_scores.json  summary.md
examples/ahc038/pahcer/json/: result_20241219_172115.json  result_20241219_172136.json  result_20241219_172922.json
examples/ahc038/tools/: vis.html
examples/ahc038/tools/leader_board/: leader_board.db
examples/ahc038/tools/out1/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  (+60 more)
examples/ahc038/tools/out2/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  (+60 more)
examples/ahc038/tools/out3/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  (+94 more)
src/: database_manager.py  db_manager.py  detail_score_record.py  initializer.py  main.py  relative_score_calculater.py  relative_score_updater.py  score_calculater.py  score_formatter.py  score_history_table_updater.py  score_record.py  submitter.py  summary_score_record.py  table_builder.py  test_case.py  viewer.py
src/ahc_local_leaderboard/: config.py  consts.py  dependency_setup.py  main.py
src/ahc_local_leaderboard/database/: database_manager.py  record_read_service.py  record_write_service.py  relative_score_updater.py
src/ahc_local_leaderboard/init/: initializer.py
src/ahc_local_leaderboard/models/: detail_score_record.py  sort_config.py  summary_score_record.py  test_case.py  test_file.py  updated_top_score.py
src/ahc_local_leaderboard/submit/: relative_score_updater.py  reserved_record_updater.py  submission_matcher.py  submitter.py  test_case_evaluator.py  test_case_processor.py  test_file_processor.py
src/ahc_local_leaderboard/utils/: console_handler.py  file_utility.py  relative_score_calculater.py  validator.py
src/ahc_local_leaderboard/view/: color_interpolator.py  score_formatter.py  table_builder.py  viewer.py
src/config/: settings.json
src/database/: database_manager.py  relative_score_updater.py
src/models/: detail_score_record.py  summary_score_record.py
src/submit/: submitter.py  test_case_evaluator.py
src/utils/: relative_score_calculater.py
src/view/: score_formatter.py  table_builder.py  viewer.py
tests/: test_main.py
tests/detabase/: test_database_manager.py  test_record_read_service.py  test_record_write_service.py
tests/init/: test_initializer.py
tests/models/: test_detail_score_record.py  test_sort_config.py  test_summary_score_record.py  test_test_case.py  test_test_file.py
tests/submit/: test_relative_score_updater.py  test_reserved_record_updater.py  test_submission_matcher.py  test_submitter.py  test_test_case_processor.py  test_test_file_processor.py
tests/utils/: test_console_handler.py  test_file_utility.py  test_relative_score_calculater.py  test_validator.py
tests/view/: test_color_interpolator.py  test_score_formatter.py  test_table_builder.py  test_viewer.py
(+495 files in other folders)
